@@ -1,45 +1,15 @@
 MD5 14bb9113a407b5056cf62a329d1645dd ChangeLog 5545
-RMD160 b7b7c796e36a04aaf95a142953bd5c3502748cbf ChangeLog 5545
-SHA256 71c8f5030ea1d192fdd917688277a30d20ceadcc4a956d3643230f8c5023f06e ChangeLog 5545
 MD5 4fdb0ffd65dc5bbcb439ea875a4f1ba6 files/configure-fix-kdemultimedia-juk.patch 4482
-RMD160 97af91f57e65f343a0cb925877a70721f9d9e8e0 files/configure-fix-kdemultimedia-juk.patch 4482
-SHA256 4339266f2d643102f823531eaa5b1740f30edf5059d1c5c7b85cbb7c180ee517 files/configure-fix-kdemultimedia-juk.patch 4482
 MD5 5503be4dfa64fd0d3bf2165747a97fb0 files/digest-juk-3.4.1 227
-RMD160 58f8a5f7fe31a86b0b07163b26bef37f1c7d10a2 files/digest-juk-3.4.1 227
-SHA256 80b474a3df150d09f2cf2fb08f5d774eb58d5067a71e26fcce28f19ce7566e18 files/digest-juk-3.4.1 227
 MD5 453075362e3201c7f44fea430afec5d5 files/digest-juk-3.4.2 308
-RMD160 03e80242eb73c2690f95be4858f7cd0c56b704d3 files/digest-juk-3.4.2 308
-SHA256 3dba31aa5797928f27277e557b7be0f817e963596cad4a4332ab534d62d48efa files/digest-juk-3.4.2 308
 MD5 05ac286d8f93c4f275aa4cec809fb5a9 files/digest-juk-3.4.3 73
-RMD160 0980cde95a4b1374dfe3d266b26c41861b3ae2cd files/digest-juk-3.4.3 73
-SHA256 fd38c00fe48ae0b8ae9f5df74927d5ff51d616ba33d77e28dd70f9df31ce6069 files/digest-juk-3.4.3 73
 MD5 e3784b0621b80bc67e95d6226fd30369 files/digest-juk-3.5.0 73
-RMD160 83fa8dd19f40c8fe320ad48c9dead36103fc2a05 files/digest-juk-3.5.0 73
-SHA256 d820d31e6020bc01706b8a240f639cae757e994ff0d5e5481151c21da38408ea files/digest-juk-3.5.0 73
 MD5 f7bf563f8c0291854194ea855b77a18d files/digest-juk-3.5.1 73
-RMD160 c9d5e58f456265f35c2a90d4b5a7b8d75800a2e4 files/digest-juk-3.5.1 73
-SHA256 126ac5a4d0f666da6b2d6ecb38305cdc7569556c64775d594c4644eb677dcdfd files/digest-juk-3.5.1 73
 MD5 c6f3f23fcb5a1fa806c5073f45b26b59 files/digest-juk-3.5.2 265
-RMD160 5e81c0b91adc803bf7923ec3176b9ff50217ed22 files/digest-juk-3.5.2 265
-SHA256 da5960a94d94974711cce49b9e15a2465e392feb2dd48db846adce8d9e02d864 files/digest-juk-3.5.2 265
 MD5 12b3c5e77687d1ffabc038b18677ac13 juk-3.4.1.ebuild 1085
-RMD160 f3a3174ef6c0fe880868568c7512436f82ddd661 juk-3.4.1.ebuild 1085
-SHA256 281aeeab095a407feadde5902f81dce1089e84293a0cb5eecbb9a00b76e6254d juk-3.4.1.ebuild 1085
 MD5 69af012da6b62027584d853f2d619e37 juk-3.4.2.ebuild 1275
-RMD160 7b94f1dd59b34eff2497fc29b718932790f6001c juk-3.4.2.ebuild 1275
-SHA256 7a5ff290bf14cceda163fb1fb9af0d02c9417207b123e74e2eb50b98e7f993ef juk-3.4.2.ebuild 1275
-MD5 50d396acfc320c63b2c2c336e23bf188 juk-3.4.3.ebuild 1268
-RMD160 6aea5aa486a2b05b598ab174984d0df043776791 juk-3.4.3.ebuild 1268
-SHA256 cc3d3931e1307207cff3bcd746757dbdd065d0a3f2032d7b5eb9c92a0a27a9b5 juk-3.4.3.ebuild 1268
+MD5 0fe85e3bd25f0bab1444bef8a324a5ca juk-3.4.3.ebuild 1273
 MD5 937e1a494b491d22e129a1ed2abc80a2 juk-3.5.0.ebuild 1214
-RMD160 295af6adab92a162cd7595594c13c1f157a9f540 juk-3.5.0.ebuild 1214
-SHA256 21524dfe205d4d6495ebf30a7b87d817febfb188a9c71e480d4fac6e818cbd0d juk-3.5.0.ebuild 1214
 MD5 a9afea7abf85b1e67e5e39db692d3135 juk-3.5.1.ebuild 1215
-RMD160 2edb65ec0deec550438a7fb2d7c7851a3a5d0dc5 juk-3.5.1.ebuild 1215
-SHA256 f24a6a2dd78755b04c37c90aea305a7cd22b44ece4467c25494af563c416ad8a juk-3.5.1.ebuild 1215
 MD5 777a6614fecfb7c0eb133a1767f84757 juk-3.5.2.ebuild 1215
-RMD160 aa6a474fe52e2599fb7194757c471da66ba82020 juk-3.5.2.ebuild 1215
-SHA256 630d233537ddbd8dfcbc4a2dd0b0187aa54206882f4fea95d33342480ee9a16f juk-3.5.2.ebuild 1215
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
-RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
-SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
