@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/juk/juk-3.4.3.ebuild,v 1.8 2005/12/10 22:45:31 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/juk/juk-3.4.3.ebuild,v 1.9 2006/03/26 01:55:22 agriffis Exp $
 
 KMNAME=kdemultimedia
 MAXKDEVER=$PV
@@ -8,7 +8,7 @@ KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta eutils
 
 DESCRIPTION="Jukebox and music manager for KDE"
-KEYWORDS="alpha amd64 ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 IUSE="flac gstreamer mp3 vorbis musicbrainz"
 
 DEPEND="media-libs/taglib
