@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/juk
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/juk/ChangeLog,v 1.43 2006/03/22 20:14:54 danarmak Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/juk/ChangeLog,v 1.44 2006/03/26 01:55:22 agriffis Exp $
+
+  26 Mar 2006; Aron Griffis <agriffis@gentoo.org> juk-3.4.3.ebuild:
+  Mark 3.4.3 stable on ia64
 
 *juk-3.5.2 (22 Mar 2006)
 
